--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tanstack/react-query": "^4.22.0",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-charts": "^3.0.0-beta.51",
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.1"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.2",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
